# canister_fuzzing

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml  lmdb-patch.diff
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
build_canister/: Cargo.toml
build_canister/src/: lib.rs
canfuzz/: Cargo.toml
canfuzz/src/: constants.rs  fuzzer.rs  instrumentation.rs  lib.rs  orchestrator.rs
canfuzz/src/custom/: candid_mutator.rs  mod.rs
canfuzz/src/custom/feedback/: instruction_count.rs  mod.rs
canfuzz/src/custom/mutator/: candid.rs
canfuzz/src/custom/observer/: decode_map.rs  instruction_count.rs  mod.rs
canfuzz_derive/: Cargo.toml
canfuzz_derive/src/: lib.rs
canister_fuzzer/: Cargo.toml
canister_fuzzer/src/: constants.rs  fuzzer.rs  instrumentation.rs  lib.rs  orchestrator.rs  sandbox_shim.rs  util.rs
canister_fuzzer/src/custom/: decode_map.rs  mod.rs  oom_exit_kind.rs
canisters/decode_candid/: Cargo.toml
canisters/decode_candid/src/: lib.rs
canisters/ledger/: Cargo.toml
canisters/ledger/src/: lib.rs
canisters/motoko/: dfx.json  mops.toml
canisters/motoko/src/candid_decode/: main.mo
canisters/motoko/src/cbor_decode/: main.mo
canisters/motoko/src/ecdsa_sign/: main.mo
canisters/motoko/src/json_decode/: main.mo
canisters/motoko/src/protobuf_decode/: main.mo
canisters/rust/decode_candid/: Cargo.toml
canisters/rust/decode_candid/src/: lib.rs
canisters/rust/ledger/: Cargo.toml
canisters/rust/ledger/src/: lib.rs
canisters/rust/rusqlite_db/: Cargo.toml
canisters/rust/rusqlite_db/src/: lib.rs  service.did
canisters/rust/stable_memory/: Cargo.toml
canisters/rust/stable_memory/src/: data.rs  lib.rs  service.did
canisters/rust/transfer/: Cargo.toml
canisters/rust/transfer/src/: lib.rs  service.did
canisters/stable_memory/: Cargo.toml
canisters/stable_memory/src/: lib.rs
canisters/transfer/src/: lib.rs
examples/: create_dir.sh
examples/decode_candid_by_instructions/: Cargo.toml  build.rs
examples/decode_candid_by_instructions/src/: decode_candid_by_instructions.rs
examples/motoko_diff/: Cargo.toml  build.rs
examples/motoko_diff/src/: motoko_diff.rs
examples/motoko_shim/: Cargo.toml  build.rs
examples/motoko_shim/src/: motoko_shim.rs
examples/rusqlite_fuzz/: Cargo.toml  build.rs
examples/rusqlite_fuzz/corpus/: .gitignore
examples/rusqlite_fuzz/src/: generate_corpus.rs  rusqlite_fuzz.rs
examples/stable_memory_ops/: Cargo.toml  build.rs
examples/stable_memory_ops/src/: stable_memory_ops.rs
examples/trap_after_await/: Cargo.toml  build.rs
examples/trap_after_await/src/: trap_after_await.rs
fuzzers/: create_dir.sh
fuzzers/decode_candid_by_instructions/: Cargo.toml  build.rs
fuzzers/decode_candid_by_instructions/src/: decode_candid_by_instructions.rs  decode_candid_by_instructions_test_input.rs
fuzzers/motoko_diff/: Cargo.toml
fuzzers/motoko_diff/src/: motoko_diff.rs
fuzzers/motoko_shim/: Cargo.toml
fuzzers/motoko_shim/src/: motoko_shim.rs
fuzzers/stable_memory_ops/: Cargo.toml  build.rs
fuzzers/stable_memory_ops/src/: stable_memory_ops.rs
fuzzers/trap_after_await/: Cargo.toml  build.rs
fuzzers/trap_after_await/src/: trap_after_await.rs  trap_after_await_test_input.rs
instrumentation/: Cargo.toml
instrumentation/src/: main.rs
motoko_canisters/: README.md  dfx.json  mops.toml
motoko_canisters/src/candid_decode/: main.mo
motoko_canisters/src/cbor_decode/: main.mo
motoko_canisters/src/ecdsa_sign/: main.mo
sandbox_shim/: Cargo.toml
sandbox_shim/src/: lib.rs
scripts/: create_example.sh  test_run.sh
