[workspace]

members = [
    "canisters/rust/decode_candid",
    "canisters/rust/ledger",
    "canisters/rust/transfer",
    "canisters/rust/stable_memory",
    "examples/decode_candid_by_instructions",
    "examples/trap_after_await",
    "examples/stable_memory_ops",
    "examples/motoko_shim",
    "examples/motoko_diff",
    "build_canister",
    "canister_fuzzer",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ic-state-machine-tests = { git = "https://github.com/dfinity/ic", rev = "d26ef1fe5c82779aebebefd1c86befde47c0d151"}
ic-types = { git = "https://github.com/dfinity/ic", rev = "d26ef1fe5c82779aebebefd1c86befde47c0d151"}
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "d26ef1fe5c82779aebebefd1c86befde47c0d151"}
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic", rev = "d26ef1fe5c82779aebebefd1c86befde47c0d151", features = ["fuzzing_code"]}
ic-wasm-transform = { git = "https://github.com/dfinity/ic", rev = "d26ef1fe5c82779aebebefd1c86befde47c0d151"}

anyhow = "1.0.75"
arbitrary = { version = "1.4.1", features = ["derive"] }
candid = { version = "0.10.17", features = ["all"] }
candid_parser = "0.1.4"
getrandom = "0.3"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-stable-structures = "0.7.0"
ic_principal = "0.1.1"
k256 = { version = "0.13", features = ["ecdsa-core"] }
libafl = { version = "0.15.3", features = ["std"] }
libafl_bolts = "0.15.3"
once_cell = "1.21.3"
rand = "0.8.5"
rand_core = "0.9.3"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
sha2 = "0.10.9"
slog = "2.7.0"
wasmparser = "0.228.0"
chrono = "0.4.41"