[workspace]

members = [
    "build_canister",
    "canister_fuzzer",
    "canisters/rust/decode_candid",
    "canisters/rust/ledger",
    "canisters/rust/stable_memory",
    "canisters/rust/transfer",
    "examples/decode_candid_by_instructions",
    "examples/motoko_diff",
    "examples/motoko_shim",
    "examples/stable_memory_ops",
    "examples/trap_after_await",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["DFINITY Stiftung <product-security@dfinity.org>"]

[workspace.dependencies]
anyhow = "1.0.75"
arbitrary = { version = "1.4.1", features = ["derive"] }
candid = { version = "0.10.17", features = ["all"] }
candid_parser = "0.1.4"
chrono = "0.4.41"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-management-canister-types = "0.4.1"
ic-stable-structures = "0.7.0"
k256 = { version = "0.13", features = ["ecdsa-core"] }
libafl = { version = "0.15.3", features = ["std"] }
libafl_bolts = "0.15.3"
once_cell = "1.21.3"
pocket-ic = "10.0.0"
rand = "0.8.5"
rand_core = "0.9.3"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
sha2 = "0.10.9"
slog = "2.7.0"
wirm = { version = "2.0.0", features = ["parallel"] }
