[workspace]

members = [
    "build_canister",
    "canfuzz",
    "canfuzz_derive",
    "canisters/rust/decode_candid",
    "canisters/rust/ledger",
    "canisters/rust/stable_memory",
    "canisters/rust/transfer",
    "examples/decode_candid_by_instructions",
    "examples/motoko_diff",
    "examples/motoko_shim",
    "examples/stable_memory_ops",
    "examples/trap_after_await",
]

resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["DFINITY Stiftung <product-security@dfinity.org>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.75"
arbitrary = { version = "1.4.1", features = ["derive"] }
candid = { version = "0.10.19", features = ["all"] }
candid_parser = { version = "0.2.3", features = ["random"] } 
chrono = "0.4.41"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-management-canister-types = "0.5.0"
ic-stable-structures = "0.7.0"
k256 = { version = "0.13", features = ["ecdsa-core"] }
once_cell = "1.21.3"
pocket-ic = "11.0.0"
rand = "0.9.2"
rand_core = "0.9.3"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
sha2 = "0.10.9"
slog = "2.7.0"
wat = "1.242.0"
wasmprinter = "0.242.0"
assert_matches = "1.5.0"
difference = "2.0.0"
ic-dummy-getrandom-for-wasm = "0.1.0"
num-traits = "0.2"
num-bigint = "0.4"
naughty-strings = "0.2.4"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

# pinned deps
libafl = { version = "=0.15.4", features = ["std"] }
libafl_bolts = {version = "=0.15.4", features = ["rand_trait"] }
wirm = { version = "=2.2.0", features = ["parallel"] }
