[package]
name = "canfuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A coverage-guided fuzzing framework for Internet Computer canisters, built on `libafl` and `pocket-ic`"
readme = "../README.md"
include = ["src", "Cargo.toml", "../LICENSE", "../README.md"]
repository = "https://github.com/dfinity/canister_fuzzing/"
documentation = "https://docs.rs/canfuzz"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
candid_parser = { workspace = true }
chrono = { workspace = true }
ic-management-canister-types = { workspace = true }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
wirm = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
naughty-strings = { workspace =  true }
canfuzz_derive = { path = "../canfuzz_derive", optional = true }

[features]
default = []
derive = ["dep:canfuzz_derive"]

[dev-dependencies]
wat = { workspace = true }
wasmprinter = { workspace = true }
assert_matches = { workspace = true }
difference = { workspace = true }