[package]
name = "canister_fuzzer"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
chrono = { workspace = true }
ic-management-canister-types = { workspace = true }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
wirm = { workspace = true }
