[package]
name = "canister_fuzzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A coverage-guided fuzzing framework for Internet Computer canisters, built on `libafl` and `pocket-ic`"
readme = "../README.md"
include = ["src", "Cargo.toml", "../LICENSE", "../README.md"]
repository = "https://github.com/dfinity/canister_fuzzing/"
documentation = "https://docs.rs/canister_fuzzer"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
chrono = { workspace = true }
ic-management-canister-types = { workspace = true }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
wirm = { workspace = true }
