[package]
name = "decode_candid_by_instructions"
version.workspace = true
edition.workspace = true

build = "build.rs"

[[bin]]
name = "decode_candid_by_instructions"
path = "src/decode_candid_by_instructions.rs"

[dependencies]
candid = { workspace = true }
canister_fuzzer = { path = "../../canister_fuzzer/" }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
