[package]
name = "decode_candid_by_instructions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

build = "build.rs"

[[bin]]
name = "decode_candid_by_instructions"
path = "src/decode_candid_by_instructions.rs"

[dependencies]
candid = { workspace = true }
canfuzz = { path = "../../canfuzz/", features = ["derive"] }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
