[package]
name = "motoko_diff"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

build = "build.rs"

[[bin]]
name = "motoko_diff"
path = "src/motoko_diff.rs"

[dependencies]
candid = { workspace = true }
canister_fuzzer = { path = "../../canister_fuzzer/" }
k256 = { workspace = true }
pocket-ic = { workspace = true }
sha2 = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
