[package]
name = "motoko_shim"
version.workspace = true
edition.workspace = true

build = "build.rs"

[[bin]]
name = "motoko_shim"
path = "src/motoko_shim.rs"

[dependencies]
candid = { workspace = true }
canister_fuzzer = { path = "../../canister_fuzzer/" }
pocket-ic = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
