[package]
name = "motoko_shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

build = "build.rs"

[[bin]]
name = "motoko_shim"
path = "src/motoko_shim.rs"

[dependencies]
candid = { workspace = true }
canfuzz = { path = "../../canfuzz/" }
pocket-ic = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
