[package]
name = "stable_memory_ops"
version.workspace = true
edition.workspace = true

build = "build.rs"

[[bin]]
name = "stable_memory_ops"
path = "src/stable_memory_ops.rs"

[dependencies]
candid = { workspace = true }
canister_fuzzer = { path = "../../canister_fuzzer/" }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
