[package]
name = "trap_after_await"
version.workspace = true
edition.workspace = true

build = "build.rs"

[[bin]]
name = "trap_after_await"
path = "src/trap_after_await.rs"

[dependencies]
ic-state-machine-tests = { workspace = true }
ic-base-types = { workspace = true }
ic-types = { workspace = true }
candid = { workspace = true }
slog = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
canister_fuzzer = { path = "../../canister_fuzzer/"}

[build-dependencies]
build_canister = { path = "../../build_canister/"}