[package]
name = "trap_after_await"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

build = "build.rs"

[[bin]]
name = "trap_after_await"
path = "src/trap_after_await.rs"

[dependencies]
candid = { workspace = true }
canfuzz = { path = "../../canfuzz/", features = ["derive"] }
once_cell = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }

[build-dependencies]
build_canister = { path = "../../build_canister/" }
