[package]
name = "motoko_diff"
version.workspace = true
edition.workspace = true

build = "build.rs"

[[bin]]
name = "motoko_diff"
path = "src/motoko_diff.rs"

[dependencies]
ic-state-machine-tests = { workspace = true }
ic-types = { workspace = true }
candid = { workspace = true }
slog = { workspace = true }
libafl = { workspace = true }
once_cell = { workspace = true }
getrandom = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
sandbox_shim = { path = "../../sandbox_shim/"}
canister_fuzzer = { path = "../../canister_fuzzer/"}

[build-dependencies]
build_canister = { path = "../../build_canister/"}