[package]
name = "trap_after_await"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trap_after_await"
path = "src/trap_after_await.rs"

[[bin]]
name = "trap_after_await_test_input"
path = "src/trap_after_await_test_input.rs"

[dependencies]
ic-state-machine-tests = { workspace = true }
ic-types = { workspace = true }
ic-config = { workspace = true }
ic-registry-proto-data-provider = { workspace = true }
ic-registry-routing-table = { workspace = true }
ic-registry-subnet-type = { workspace = true }
candid = { workspace = true }
slog = { workspace = true }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sandbox_shim = { path = "../../sandbox_shim/"}