[package]
name = "decode_candid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
ic-dummy-getrandom-for-wasm  = { workspace = true }