[package]
name = "rusqlite_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arbitrary = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic-rusqlite = { workspace = true }
serde = { workspace = true }
